# EDAPro

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  setup.cfg  setup.py
EDAPro/: .gitignore  module.py  requirements.txt  setup.py
edapro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
