[metadata]
name = edapro
metadata_version = 2.4
version = 0.1.0
description = A Python library for advanced exploratory data analysis
author = aitechman
author_email = aitechman@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/edapro
keywords = eda, data-analysis, statistics, visualization
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:
install_requires =
    numpy
    pandas
    seaborn
    matplotlib
    scipy
    statsmodels
    scikit-learn
    wordcloud
    ipython
python_requires = >=3.8

[options.package_data]
* = *.txt, *.md
